--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item><layer-list>
-        <item>
-            <shape>
-                <solid
-                    android:color="#52FFFFFF">
-                </solid>
+    <item>
+        <layer-list>
+            <item>
+                <shape>
+                    <solid
+                        android:color="#52FFFFFF">
+                    </solid>
 
-                <corners android:radius="5dp"/>
+                    <corners android:radius="5dp"/>
 
-                <padding
-                    android:top="10dp"
-                    android:bottom="10dp"/>
+                    <padding
+                        android:top="10dp"
+                        android:bottom="10dp"/>
 
-                <stroke
-                    android:width="1dp"
-                    android:color="#FFFFFF"/>
-            </shape>
-        </item>
-    </layer-list></item>
+                    <stroke
+                        android:width="1dp"
+                        android:color="#FFFFFF"/>
+                </shape>
+            </item>
+        </layer-list>
+    </item>
 </selector>
