--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,10 +63,10 @@
             </FrameLayout>
 
             <TextView
-                android:id="@+id/selected_sim_cards_count"
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="130dp"
+                android:id="@+id/selected_sim_info"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="120dp"
                 android:layout_gravity="center_horizontal"
                 android:textAlignment="center"
                 android:textColor="@color/white"
@@ -126,7 +126,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/main_activity_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="58dp"
