--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,15 @@
         <item name="android:textColorPrimary">@color/white</item>
     </style>
 
+    <style name="Theme.Settings" parent="Theme.AppCompat.Light">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">11dp</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
 </resources>
