--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#4C0153"
-        android:endColor="@color/purple_700"
+    <gradient android:startColor="#80981FA3"
+        android:centerColor="#993C1780"
+        android:endColor="#B323176C"
         android:angle="270"/>
 </shape>
