--- a/app/src/main/res/layout/activity_add_phone.xml
+++ b/app/src/main/res/layout/activity_add_phone.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddEditPhoneActivity"
+    tools:context=".activity.AddEditPhoneActivity"
     android:padding="30dp">
 
     <EditText
