--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,153 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.MainActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/purple_700">
+    android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:theme="@style/Theme.SCTU">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="@android:color/transparent"
-            android:background="@drawable/gradient_bg"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/bg_pic_1"
-                android:alpha="0.7"
-                app:layout_collapseMode="parallax"/>
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin">
-
-                <TextView
-                    android:id="@+id/selected_logs_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15dp"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-            </androidx.appcompat.widget.Toolbar>
-
-            <FrameLayout
-                android:id="@+id/spinner_frame_layout"
-                android:layout_width="120dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="70dp"
-                android:paddingLeft="12dp"
-                android:background="@drawable/spinner_bg">
-
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:dropDownWidth="120dp"
-                    android:spinnerMode="dropdown"
-                    android:popupBackground="@drawable/spinner_menu"/>
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/selected_sim_info"
-                android:layout_width="180dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="120dp"
-                android:layout_gravity="center_horizontal"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="11dp"/>
-
-            <FrameLayout
-                android:id="@+id/logs_count_frame_layout"
-                android:layout_width="45dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="155dp"
-                android:layout_marginLeft="145dp"
-                android:background="@drawable/logs_count_bg">
-
-                <TextView
-                    android:id="@+id/total_logs_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|right"
-                    android:paddingRight="6dp"
-                    android:textColor="@color/white"
-                    android:textSize="11dp"/>
-
-                <ImageView
-                    android:id="@+id/message_icon"
-                    android:layout_width="21dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_message"
-                    android:paddingLeft="6dp"/>
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/uploaded_frame_layout"
-                android:layout_width="45dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="155dp"
-                android:layout_marginLeft="200dp"
-                android:background="@drawable/logs_count_bg">
-
-                <TextView
-                    android:id="@+id/total_uploaded_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|right"
-                    android:paddingRight="6dp"
-                    android:textColor="@color/white"
-                    android:textSize="11dp"/>
-
-                <ImageView
-                    android:id="@+id/uploaded_icon"
-                    android:layout_width="21dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_upload"
-                    android:paddingLeft="6dp"/>
-            </FrameLayout>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
         android:id="@+id/main_activity_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="58dp"
-        android:background="@drawable/rounded_corners"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
     </FrameLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:src="@drawable/ic_add"
-        app:layout_anchor="@id/bottom_nav"
-        app:layout_anchorGravity="bottom|right"
-        android:layout_marginBottom="80dp"
-        android:layout_marginRight="20dp"/>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav"
-        android:layout_width="match_parent"
-        android:layout_height="58dp"
-        app:menu="@menu/bottom_nav_menu"
-        android:layout_gravity="bottom"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
