--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -25,27 +25,33 @@
                 android:layout_alignParentStart="true"
                 android:animateLayoutChanges="true"
                 android:id="@+id/simSpinnerWrapperWhenHeaderContracted"
-                android:layout_width="70dp"
+                android:layout_width="105dp"
                 android:layout_height="25dp">
+
                 <Spinner
                     android:id="@+id/spinnerSimWhenHeaderContracted"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginBottom="3dp"
                     android:background="@color/transparent"
                     android:gravity="center"
                     android:spinnerMode="dropdown"
-                    android:layout_marginBottom="3dp" />
+                    android:popupBackground="@drawable/spinner_menu"/>
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_spinner_arrow"
                     android:layout_alignParentEnd="true"
                     android:scaleType="centerInside"/>
+
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="85dp"
                     android:layout_height="1dp"
                     android:background="#fff"
+                    android:layout_centerHorizontal="true"
                     android:layout_alignParentBottom="true"/>
+
             </RelativeLayout>
 
             <!-- Back Button -->
@@ -60,8 +66,8 @@
                 android:padding="3dp"
                 android:background="@drawable/pressedstated_white_border"
                 android:focusable="true"
-                android:clickable="true"/>
-
+                android:clickable="true"
+                android:layout_centerVertical="true"/>
 
             <!-- Page Title -->
             <TextView
@@ -74,50 +80,18 @@
                 android:textColor="#FFF"
                 android:layout_centerVertical="true"/>
 
-
-            <!-- Toolbar features -->
-            <RelativeLayout
-                android:id="@+id/selectionFeature"
-                android:layout_toRightOf="@id/pageTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:layout_toLeftOf="@id/deleteSelected"
-                    android:id="@+id/uploadSelected"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_upload"
-                    android:padding="3dp"
-                    android:background="@drawable/pressedstated_white_border"
-                    android:focusable="true"
-                    android:clickable="true"
-                    android:layout_marginEnd="10dp"/>
-
-                <ImageView
-                    android:layout_alignParentEnd="true"
-                    android:id="@+id/deleteSelected"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_delete"
-                    android:padding="3dp"
-                    android:background="@drawable/pressedstated_white_border"
-                    android:focusable="true"
-                    android:clickable="true"/>
-
-            </RelativeLayout>
-
-            <ImageView
-                android:id="@+id/moreMenu"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/searchInput"
+                android:layout_toRightOf="@id/backBtn"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_baseline_more_vert"
-                android:scaleType="centerInside"
-                android:padding="3dp"
-                android:background="@drawable/pressedstated_white_border"
-                android:focusable="true"
-                android:clickable="true"/>
+                android:hint="Search..."
+                android:textColorHint="#C4C4C4"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:layout_centerVertical="true"
+                android:background="@null"/>
+
 
         </RelativeLayout>
 
