--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="12dp"
-    android:textColor="@color/white">
+    android:paddingLeft="10dp"
+    android:textColor="@color/white"
+    android:gravity="center_vertical">
 
 </TextView>
