--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,39 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activity.MainActivity">
 
     <item
-        android:id="@+id/upload_all_SMS"
+        android:id="@+id/uploadAllSms"
         android:title="Upload all uploaded SMS"
         app:showAsAction="never"
         android:orderInCategory="1"/>
 
     <item
-        android:id="@+id/settings"
-        android:title="Settings"
+        android:id="@+id/uploadAllCalls"
+        android:title="Upload all uploaded calls"
         app:showAsAction="never"
         android:orderInCategory="2"/>
 
     <item
-        android:id="@+id/delete_icon"
-        android:title="Delete log"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_delete"
+        android:id="@+id/settings"
+        android:title="Settings"
+        app:showAsAction="never"
         android:orderInCategory="3"/>
 
     <item
-        android:id="@+id/upload_icon"
+        android:id="@+id/uploadSelected"
         android:title="New upload"
         app:showAsAction="always"
         android:icon="@drawable/ic_upload"
+        android:background="@drawable/pressedstated_white_border"
         android:orderInCategory="4"/>
 
     <item
-        android:id="@+id/search_icon"
+        android:id="@+id/deleteSelected"
+        android:title="Delete log"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_delete"
+        android:background="@drawable/pressedstated_white_border"
+        android:orderInCategory="5"/>
+
+    <item
+        android:id="@+id/searchLogs"
         android:icon="@drawable/ic_search"
         android:title="Search"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
-        android:orderInCategory="5"
-        app:showAsAction="always" />
+        android:orderInCategory="6"
+        android:background="@drawable/pressedstated_white_border"
+        app:showAsAction="always"/>
 
 </menu>
