--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -27,7 +27,7 @@
         app:tabIndicatorHeight="1dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/phoneRecyclerView"
+        android:id="@+id/callRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
