--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -81,7 +81,7 @@
                 android:layout_centerVertical="true"/>
 
             <EditText
-                android:id="@+id/searchInput"
+                android:id="@+id/searchEditText"
                 android:layout_toRightOf="@id/backBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
