--- a/app/src/main/res/layout/activity_add_call.xml
+++ b/app/src/main/res/layout/activity_add_call.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AddEditPhoneActivity"
+    tools:context=".activity.AddEditCallActivity"
     android:padding="30dp">
 
     <EditText
-        android:id="@+id/phone_sid_input"
+        android:id="@+id/call_sid_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -30,7 +30,7 @@
         android:hint="Enter call duration"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_sid_input"
+        app:layout_constraintTop_toBottomOf="@+id/call_sid_input"
         android:textColor="@color/black"/>
 
     <EditText
