--- a/app/src/main/res/layout/fragment_sms_by_oa.xml
+++ b/app/src/main/res/layout/fragment_sms_by_oa.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/smsSearchResultsRecyclerView"
+        android:id="@+id/smsByOARecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
