--- a/app/src/main/res/layout/sms_row.xml
+++ b/app/src/main/res/layout/sms_row.xml
@@ -1,84 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/sms_card_view"
+        android:id="@+id/sms_cv"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="wrap_content">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/sms_icon_background_image_view"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/sms_icon_bg"
-            android:backgroundTint="#E1D0E9"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="15dp">
 
-        <ImageView
-            android:id="@+id/sms_icon_image_view"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="19dp"
-            android:src="@drawable/ic_message"/>
+                <RelativeLayout
+                    android:id="@+id/sms_icons_layout"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_centerVertical="true">
 
-        <TextView
-            android:id="@+id/sms_by_sid_tv"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:background="@drawable/sms_icon_bg"
-            android:text="10"
-            android:textSize="7dp"
-            android:paddingTop="2dp"
-            android:textAlignment="center"
-            android:textColor="#838383"
-            android:layout_marginLeft="46dp"
-            android:layout_marginTop="35dp"
-            android:elevation="3dp"/>
+                    <ImageView
+                        android:id="@+id/sms_icons_bg"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/sms_icon_bg"
+                        app:tint="#E1D0E9" />
 
-        <TextView
-            android:id="@+id/sms_sid_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Message SID"
-            android:textSize="12dp"
-            android:textAllCaps="true"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="10dp"/>
+                    <ImageView
+                        android:id="@+id/sms_icon_image_view"
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_message" />
 
-        <TextView
-            android:id="@+id/sms_content_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your verification code is 123456"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="34dp"
-            android:textSize="12dp"
-            android:textColor="#838383"/>
+                    <TextView
+                        android:id="@+id/total_sms_by_sid_tv"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="2dp"
+                        android:layout_marginBottom="4dp"
+                        android:background="@drawable/sms_icon_bg"
+                        android:elevation="3dp"
+                        android:paddingTop="2dp"
+                        android:text="10"
+                        android:textAlignment="center"
+                        android:textColor="#838383"
+                        android:textSize="7dp" />
 
-        <TextView
-            android:id="@+id/sms_date_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="15dp"
-            android:text="24/05/22"
-            android:textSize="10dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="10dp"
-            android:textColor="#838383"/>
+                </RelativeLayout>
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:background="#E5E5E5"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="15dp"/>
+                <RelativeLayout
+                    android:id="@+id/message_frame"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@id/sms_icons_layout">
 
+                    <TextView
+                        android:id="@+id/sms_sid_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Message SID"
+                        android:textAllCaps="true"
+                        android:textSize="12dp" />
+
+                    <TextView
+                        android:id="@+id/sms_content_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/sms_sid_tv"
+                        android:layout_marginTop="3dp"
+                        android:text="Your verification code is 123456"
+                        android:textColor="#838383"
+                        android:textSize="12dp" />
+
+                    <TextView
+                        android:id="@+id/sms_date_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:text="24/05/22"
+                        android:textColor="#838383"
+                        android:textSize="10dp" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:background="#E5E5E5"
+                android:layout_marginStart="75dp"
+                android:layout_marginEnd="20dp"
+                android:layout_gravity="bottom"/>
+
+        </FrameLayout>
 
     </androidx.cardview.widget.CardView>
 </LinearLayout>
